<resources>
    <string name="app_name">AclChallenge01</string>
    <string name="date">12/07/2019</string>
    <string name="purpose">Google Africa Certification Scholarships in partnership with Andela and Pluralsight</string>
    <string name="about_alc">About ALC</string>
    <string name="profile">Profile</string>
    <string name="title_activity_about">About ACL</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="mnca">MNC Aubin</string>
    <string name="slackmnca">"@MNC Aubin"</string>
    <string name="country">Country:</string>
    <string name="track">Track:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="cameroon">Cameroon</string>
    <string name="phoneNo">698-227-573</string>
    <string name="emailVal">mouafoaubin@gmail.com</string>
    <string name="android">Android</string>
</resources>
