<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#4F83F8"
        android:text="@string/about_alc"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E0B0B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="#4F83F8"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E0B0B0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutBtn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="date"
        android:text="@string/date"
        android:textColor="#400D0D0E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="291dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/purpose"
        android:textAlignment="center"
        android:textColor="#8D252525"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>